<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/bg_ui">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"/>

            <EditText
                android:id="@+id/regfullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:hint="Full Name"
                />
            <EditText
                android:id="@+id/regcitizenship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"

                android:hint="Citizenship Number"
               />
            <EditText
                android:id="@+id/regfathername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:hint="Father Name"/>

            <EditText
                android:id="@+id/regcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:hint="Contact"/>

            <EditText
                android:id="@+id/regemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:hint="Email"/>
            <EditText
                android:id="@+id/regusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:hint="User Name"
                />
            <EditText
                android:id="@+id/regpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="Password"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SignUp"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bg_ui"
                />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LogIn"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bg_ui"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
