...
        android:background="@drawable/bg_ui"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="Log In" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_ui"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="Sign Up" />

</LinearLayout>

